# AgentSurf

./: .gitignore  LICENSE  README.md  pyproject.toml
config/ezviz_desktop/: visual_confirmation.json
install/: README.md  install-agent.ps1
src/agentsurf/: __init__.py  acp.py  agent.py  browser.py  cli.py  debug_logging.py  desktop_runtime.py  graph.py  llm.py  runtime.py  schemas.py  server.py  vision.py
src/agentsurf/tools/: __init__.py  desktop_ezviz.py  ezviz.py
tests/: test_acp.py  test_agent.py  test_cli.py  test_debug_logging.py  test_desktop_ezviz.py  test_desktop_runtime.py  test_ezviz.py
