[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsurf"
version = "0.1.0"
description = "Browser Agent v3 with Playwright tools, vision feedback, and LangGraph orchestration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "playwright>=1.45",
    "uvicorn[standard]>=0.30",
]
graph = [
    "langgraph>=0.2",
]
qwen = [
    "openai>=1.40",
]
desktop = [
    "psutil>=5.9",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8",
]
dev = [
    "pytest>=8",
]

[project.scripts]
agentsurf = "agentsurf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
